2021-05-10  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Update for 0.185.

2021-05-11  Frank Ch. Eigler  <fche@redhat.com>

	* elfutils.spec.in: Add procps to BuildRequires: for %check.

2021-05-10  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Update for 0.184.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* eu.am (NO_PACKED_NOT_ALIGNED_WARNING): New variable.
	(AM_CFLAGS): Use NO_PACKED_NOT_ALIGNED_WARNING.
	(AM_CXXFLAGS): Likewise.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* eu.am (TRAMPOLINES_WARNING): New variable.
	(AM_CFLAGS): Use TRAMPOLINES_WARNING.
	(AM_CXXFLAGS): Likewise.

2021-02-12  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Escape %%check in comment.

2021-02-05  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Update for 0.183.

2020-12-20  Dmitry V. Levin  <ldv@altlinux.org>

	* .gitignore: New file.

2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	* 10-default-yama-scope.conf: Fix spelling typo in comment.
	* upload-release.sh: Likewise.
	* elfutils.spec.in: Fix spelling typos in %changelog.

2020-11-04  Dmitry V. Levin  <ldv@altlinux.org>

	* profile.sh.in, profile.csh.in: Do not define $DEBUGINFOD_URLS unless
	configured using --enable-debuginfod-urls.

2020-11-02  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (pkgconfig_DATA, install-data-local, uninstall-local):
	Conditionalize on LIBDEBUGINFOD instead of DEBUGINFOD.

2020-10-31  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (install-data-local, uninstall-local): Conditionalize
	on DEBUGINFOD.

2020-10-30  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Update for 0.182.

2020-10-31  Frank Ch. Eigler  <fche@redhat.com>

	* debuginfod.service: Bump up TimeoutStopSec.

2020-10-30  Frank Ch. Eigler  <fche@redhat.com>

	* elfutils.spec.in: Fix debuginfod config/state file attributes
	for non-lossy updates.

2020-10-08  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.am (uninstall-local): Uninstall the new profile.d files.
