@@ -277,6 +277,11 @@ program is reexecuted. If XDG_CACHE_HOME is set then
 $XDG_CACHE_HOME/debuginfod_client is the default location, otherwise
 $HOME/.cache/debuginfod_client is used.
 
+.TP 21
+.B DEBUGINFOD_RETRY_LITMIT
+This environment variable governs the default limit of retry attempts. If a
+query failed with errno other than ENOENT, will initiate several attempts
+within the limit.
 
 .SH "ERRORS"
 The following list is not comprehensive. Error codes may also
